# mcp-stateless

./: .dockerignore  .env.example  .gitignore  Dockerfile  MCP-STATELESS-DEMO.html  README.md  architecture.html  docker-compose.yml  mcp-stateless_architecture.html  pyproject.toml
deploy/: redeploy.sh
deploy/db/: schema.sql
scripts/: smoke.py  verify_sdk.py
src/mcp_stateless_demo/: __init__.py  config.py
src/mcp_stateless_demo/cart/: __init__.py  models.py  store.py  store_postgres.py  token.py
src/mcp_stateless_demo/client/: __init__.py  __main__.py  runner.py
src/mcp_stateless_demo/cloud/: __init__.py  logs.py
src/mcp_stateless_demo/proxy/: __init__.py  __main__.py  app.py
src/mcp_stateless_demo/server/: __init__.py  __main__.py  app.py  identity.py  tools.py
src/mcp_stateless_demo/ui/: __init__.py  __main__.py  gradio_app.py  panels.py
tests/: conftest.py
tests/integration/: test_conversation.py  test_core_claim.py  test_proxy_control.py  test_runner.py  test_store_postgres.py
tests/unit/: test_app_builds.py  test_cloud_logs.py  test_gradio_app.py  test_identity.py  test_logs.py  test_panels.py  test_store_contract.py  test_token.py
