[project]
name = "mcp-stateless-demo"
version = "0.1.0"
description = "Live before/after demo of MCP going stateless at the protocol layer (2026-07-28 RC)"
requires-python = ">=3.11,<3.12"
dependencies = [
    "mcp[cli]==2.0.0b2",
    "starlette",
    "uvicorn",
    "httpx2",
    "asyncpg>=0.30",
    "pydantic-settings>=2.7",
    "gradio>=6.20,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_stateless_demo"]

[tool.uv]
# mcp==2.0.0b2 (latest beta) and its pydantic alpha are prereleases — allow them
# repo-wide so `uv sync` works without a flag. Bumps are manual (RC-era).
prerelease = "allow"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
# Strict typing is enforced on the load-bearing modules via CLI targeting
# (CI + Makefile), NOT globally:
#   mypy --strict src/mcp_stateless_demo/cart src/mcp_stateless_demo/client

[[tool.mypy.overrides]]
module = "asyncpg.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
